# guess-game

./: .env.example  docker-compose.yml
backend/: pyproject.toml
backend/game/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/game/migrations/: 0001_initial.py  0002_initial.py
backend/guess_game/: asgi.py  settings.py  urls.py  wsgi.py
backend/moderation/: admin.py  models.py  serializers.py  urls.py  views.py
backend/moderation/migrations/: 0001_initial.py  0002_initial.py
backend/user/: admin.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
